--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
   </header>
 
   <!-- Hero Section -->
-  <section class="relative bg-cover bg-center h-[600px] text-white flex items-center justify-center" style="background-image: url('/assets/images/hero-image.jpg');">
+  <!--  <section class="relative bg-cover bg-center h-[600px] text-white flex items-center justify-center" style="background-image: url('/assets/images/hero-image.jpg');">
     <div class="bg-black bg-opacity-70 p-10 rounded text-center">
       <h2 class="text-5xl font-bold uppercase mb-4">Coming Soon</h2>
       <p class="text-lg mb-6">Our website is under construction. Stay connected with Kukku Masala!</p>
       <a href="#contact" class="bg-yellow-500 hover:bg-yellow-600 text-white px-6 py-3 rounded text-sm font-semibold">Notify Me</a>
     </div>
-  </section>
+  </section> -->
 
   <!-- Product Section -->
   <section id="products" class="py-20 px-6 bg-white">
