--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         <h1 class="text-2xl font-bold tracking-wide">KUKKU MASALAA</h1>
       </div>
       <nav class="space-x-6 text-sm">
-        <a href="#products" class="hover:text-yellow-400">Products</a>
-        <a href="#about" class="hover:text-yellow-400">About</a>
-        <a href="#contact" class="hover:text-yellow-400">Contact</a>
+        <a href="#About" class="hover:text-yellow-400">About</a>
+        <a href="#Products" class="hover:text-yellow-400">Products</a>      
+        <a href="#Contact" class="hover:text-yellow-400">Contact</a>
       </nav>
     </div>
   </header>
@@ -42,7 +42,7 @@
   </section> -->
   
   <!-- About Section -->
-  <section id="about" class="py-20 px-6 bg-gray-100">
+  <section id="About" class="py-20 px-6 bg-gray-100">
     <div class="max-w-4xl mx-auto text-center">
       <h3 class="text-4xl font-bold mb-8">About Kukku Masala</h3>
       <p class="text-lg text-gray-700 mb-6">
@@ -69,7 +69,7 @@
                 <img src="amazon.png" alt="Amazon" class="w-5 h-5" /> <span>Amazon</span>
               </a>
               <span class="flex items-center space-x-1 bg-gray-400 text-white px-3 py-2 rounded text-sm cursor-not-allowed opacity-60">
-                <img src="/assets/icons/flipkart.png" alt="Flipkart" class="w-5 h-5" /> <span>Flipkart</span>
+                <img src="flipkart.png" alt="Flipkart" class="w-5 h-5" /> <span>Flipkart</span>
               </span>
               <a href="https://www.meesho.com/KUKKUMASALAA?ms=2" target="_blank" class="flex items-center space-x-1 bg-pink-600 text-white px-3 py-2 rounded hover:bg-pink-700 text-sm">
                 <img src="meesho.png" alt="Meesho" class="w-5 h-5" /> <span>Meesho</span>
@@ -85,6 +85,12 @@
   <section id="contact" class="py-20 px-6">
     <div class="max-w-xl mx-auto text-center">
       <h3 class="text-4xl font-bold mb-10">Get in Touch</h3>
+       <p>&copy; 2025 Kukku Masala. All rights reserved.</p>
+    <div class="flex justify-center space-x-6 mt-3 text-sm">
+      <a href="https://www.facebook.com/profile.php?id=61571084313910" class="hover:text-yellow-400">Facebook</a>
+      <a href="https://www.instagram.com/kukkumasalaa/" class="hover:text-yellow-400">Instagram</a>
+      <a href="https://wa.me/917007043743" class="hover:text-yello="#"w-400">WhatsApp</a>
+    </div>
       <p class="text-gray-700 mb-4"><strong>Phone:</strong> +91 70070 43743</p>
       <p class="text-gray-700 mb-4"><strong>Email:</strong> <a href="mailto:info@kukkumasala.com" class="text-blue-600 hover:underline">kukkumasalaa@gmail.com</a></p>
       <p class="text-gray-700 mb-8"><strong>Location:</strong> Mahoba, U.P., India</p>
@@ -99,12 +105,7 @@
 
   <!-- Footer -->
   <footer class="bg-black text-white text-center py-6">
-    <p>&copy; 2025 Kukku Masala. All rights reserved.</p>
-    <div class="flex justify-center space-x-6 mt-3 text-sm">
-      <a href="https://www.facebook.com/profile.php?id=61571084313910" class="hover:text-yellow-400">Facebook</a>
-      <a href="https://www.instagram.com/kukkumasalaa/" class="hover:text-yellow-400">Instagram</a>
-      <a href="#" class="hover:text-yellow-400">Twitter</a>
-    </div>
+   
   </footer>
 
   <!-- WhatsApp Chat Button -->
