--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
 
   <!-- Footer -->
   <footer class="bg-black text-white text-center py-6">
-   
+     <p>&copy; 2025 Kukku Masala. All rights reserved.</p>
+    <div class="flex justify-center space-x-6 mt-3 text-sm"></div>
   </footer>
 
   <!-- WhatsApp Chat Button -->
