--- a/index.html
+++ b/index.html
@@ -17,18 +17,28 @@
   </style>
 </head>
 <body class="bg-white text-gray-900">
-  <!-- Header -->
+   <!-- Header -->
   <header class="bg-black text-white p-6 shadow-md">
     <div class="max-w-7xl mx-auto flex justify-between items-center">
       <div class="flex items-center space-x-3">
-        <img src="logo.png" alt="Kukku Masala Logo" class="w-16 h-16" />
-        <h1 class="text-2xl font-bold tracking-wide">KUKKU MASALAA</h1>
+        <img src="logo.png" href="https://kukkumasalaa.com/"alt="Kukku Masala Logo" class="w-16 h-16" />
+        <h1 class="text-2xl font-bold tracking-wide" href="https://kukkumasalaa.com/">KUKKU MASALAA</h1>
       </div>
-      <nav class="space-x-6 text-sm">
-        <a href="#About" class="hover:text-yellow-400">About</a>
-        <a href="#Products" class="hover:text-yellow-400">Products</a>      
-        <a href="#Contact" class="hover:text-yellow-400">Contact</a>
-      </nav>
+        <button id="menuToggle" class="md:hidden block text-white">
+  ☰
+</button>
+<nav id="navMenu" class="flex-col md:flex md:flex-row gap-6 text-sm hidden md:flex bg-black md:bg-transparent absolute md:static top-16 left-1/2 transform -translate-x-1/2 w-3/4 md:w-auto p-4 md:p-0 text-center z-50">
+
+  <a href="#products" class="hover:text-yellow-400 block md:inline" >Products</a>
+  <a href="#about" class="hover:text-yellow-400 block md:inline">About</a>
+  <a href="#contact" class="hover:text-yellow-400 block md:inline">Contact</a>
+</nav>
+<script>
+  document.getElementById('menuToggle').addEventListener('click', function () {
+    const nav = document.getElementById('navMenu');
+    nav.classList.toggle('hidden');
+  });
+</script>
     </div>
   </header>
 
