--- a/index.html
+++ b/index.html
@@ -95,10 +95,17 @@
   <section id="contact" class="py-20 px-6">
     <div class="max-w-xl mx-auto text-center">
       <h3 class="text-4xl font-bold mb-10">Get in Touch</h3>
-    <div class="flex justify-center space-x-6 mt-3 text-sm">
-      <a href="https://www.facebook.com/profile.php?id=61571084313910" class="hover:text-yellow-400">Facebook</a>
-      <a href="https://www.instagram.com/kukkumasalaa/" class="hover:text-yellow-400">Instagram</a>
-      <a href="https://wa.me/917007043743" class="hover:text-yello="#"w-400">WhatsApp</a>
+       <div class="flex flex-col md:flex-row justify-center gap-4 mb-6">
+        <a href="https://www.facebook.com/profile.php?id=61571084313910" target="_blank" class="flex items-center gap-2 bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-full shadow-md">
+          <img src="facebook.png" alt="Facebook" class="w-5 h-5"> <span>Facebook</span>
+        </a>
+        <a href="https://www.instagram.com/kukkumasalaa/" target="_blank" class="flex items-center gap-2 bg-gradient-to-r from-yellow-400 via-pink-500 to-purple-600 text-white px-4 py-2 rounded-full shadow-md">
+          <img src="instagram.png" alt="Instagram" class="w-5 h-5"> <span>Instagram</span>
+        </a>
+        <a href="https://wa.me/917007043743" target="_blank" class="flex items-center gap-2 bg-green-500 hover:bg-green-600 text-white px-4 py-2 rounded-full shadow-md">
+          <img src="whatsapp.png" alt="WhatsApp" class="w-5 h-5"> <span>WhatsApp</span>
+        </a>
+      
     </div>
       <p class="text-gray-700 mb-4"><strong>Phone:</strong> +91 70070 43743</p>
       <p class="text-gray-700 mb-4"><strong>Email:</strong> <a href="mailto:info@kukkumasala.com" class="text-blue-600 hover:underline">kukkumasalaa@gmail.com</a></p>
