--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
       <h3 class="text-4xl font-bold mb-10">Get in Touch</h3>
        <div class="flex flex-col md:flex-row justify-center gap-4 mb-6">
         <a href="https://www.facebook.com/profile.php?id=61571084313910" target="_blank" class="flex items-center gap-2 bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-full shadow-md">
-          <img src="facebook.png" alt="Facebook" class="w-5 h-5"> <span>Facebook</span>
+          <img src="fb.png" alt="Facebook" class="w-5 h-5"> <span>Facebook</span>
         </a>
         <a href="https://www.instagram.com/kukkumasalaa/" target="_blank" class="flex items-center gap-2 bg-gradient-to-r from-yellow-400 via-pink-500 to-purple-600 text-white px-4 py-2 rounded-full shadow-md">
-          <img src="instagram.png" alt="Instagram" class="w-5 h-5"> <span>Instagram</span>
+          <img src="inst.png" alt="Instagram" class="w-5 h-5"> <span>Instagram</span>
         </a>
         <a href="https://wa.me/917007043743" target="_blank" class="flex items-center gap-2 bg-green-500 hover:bg-green-600 text-white px-4 py-2 rounded-full shadow-md">
           <img src="whatsapp.png" alt="WhatsApp" class="w-5 h-5"> <span>WhatsApp</span>
