--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <header class="bg-black text-white p-6 shadow-md">
     <div class="max-w-7xl mx-auto flex justify-between items-center">
       <div class="flex items-center space-x-3">
-        <img src="logo.png" href="https://kukkumasalaa.com/"alt="Kukku Masala Logo" class="w-16 h-16" />
-        <h1 class="text-2xl font-bold tracking-wide" href="https://kukkumasalaa.com/">KUKKU MASALAA</h1>
+        <img src="logo.png" href="https://kukkumasalaa.com/" alt="Kukku Masala Logo" class="w-16 h-16" />
+        <h1 class="text-3xl font-bold tracking-wide" href="https://kukkumasalaa.com/" color: #ffb000>KUKKU MASALAA</h1>
       </div>
         <button id="menuToggle" class="md:hidden block text-white">
   ☰
