--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
       font-family: 'Poppins', sans-serif;
     }
   </style>
-</head>
+</head>color="
 <body class="bg-white text-gray-900">
    <!-- Header -->
   <header class="bg-black text-white p-6 shadow-md">
     <div class="max-w-7xl mx-auto flex justify-between items-center">
       <div class="flex items-center space-x-3">
         <img src="logo.png" href="https://kukkumasalaa.com/" alt="Kukku Masala Logo" class="w-16 h-16" />
-        <h1 class="text-3xl font-bold black-mango-regular"  color: #ffb000>KUKKU MASALAA</h1>
+        <h1 class="text-3xl font-bold black-mango-regular" color: #ffb000; >KUKKU </hi><h3></h3 color: #e65100;> MASALAA</h1>
       </div>
         <button id="menuToggle" class="md:hidden block text-white">
   ☰
