--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       font-family: 'Poppins', sans-serif;
     }
   </style>
-</head>color="
+</head>
 <body class="bg-white text-gray-900">
    <!-- Header -->
   <header class="bg-black text-white p-6 shadow-md">
