--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="max-w-7xl mx-auto flex justify-between items-center">
       <div class="flex items-center space-x-3">
         <img src="logo.png" href="https://kukkumasalaa.com/" alt="Kukku Masala Logo" class="w-16 h-16" />
-        <h1 class="text-3xl font-bold black-mango-regular" color: #ffb000; >KUKKU </hi><h3></h3 color: #e65100;> MASALAA</h1>
+        <h1 class="text-3xl font-bold black-mango-regular" color: #ffb000; >KUKKU MASALAA</h1>
       </div>
         <button id="menuToggle" class="md:hidden block text-white">
   ☰
@@ -54,7 +54,7 @@
   <!-- About Section -->
   <section id="About" class="py-20 px-6 bg-gray-100">
     <div class="max-w-4xl mx-auto text-center">
-      <h3 class="text-4xl font-bold mb-8">About Kukku Masala</h3>
+      <h3 class="text-4xl font-bold mb-8">About</h3>
       <p class="text-lg text-gray-700 mb-6">
         Kukku Masala was born from a passion for real, bold Indian flavors. We handpick the finest spices and blend them using traditional methods passed down through generations.
       </p>
@@ -110,12 +110,12 @@
       <p class="text-gray-700 mb-4"><strong>Phone:</strong> +91 70070 43743</p>
       <p class="text-gray-700 mb-4"><strong>Email:</strong> <a href="mailto:info@kukkumasala.com" class="text-blue-600 hover:underline">kukkumasalaa@gmail.com</a></p>
       <p class="text-gray-700 mb-8"><strong>Location:</strong> Mahoba, U.P., India</p>
-      <form class="space-y-4">
+    <!--  <form class="space-y-4">
         <input type="text" placeholder="Your Name" class="w-full border px-4 py-2 rounded" required>
         <input type="email" placeholder="Your Email" class="w-full border px-4 py-2 rounded" required>
         <textarea placeholder="Your Message" class="w-full border px-4 py-2 rounded h-28" required></textarea>
         <button type="submit" class="bg-yellow-500 text-white px-6 py-2 rounded hover:bg-yellow-600">Send Message</button>
-      </form>
+      </form>-->
     </div>
   </section>
 
