--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   });
 </script>
     </div>
-  </header>MASALAA
+  </header>
 
   <!-- Hero Section -->
   <!--  <section class="relative bg-cover bg-center h-[600px] text-white flex items-center justify-center" style="background-image: url('/assets/images/hero-image.jpg');">
