--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     </div>
       <p class="text-gray-700 mb-4"><strong>Phone:</strong> +91 70070 43743</p>
       <p class="text-gray-700 mb-4"><strong>Email:</strong> <a href="mailto:info@kukkumasala.com" class="text-blue-600 hover:underline">kukkumasalaa@gmail.com</a></p>
-      <p class="text-gray-700 mb-8"><strong>Location:</strong> Mahoba, U.P., India</p>
+    <!--  <p class="text-gray-700 mb-8"><strong>Location:</strong> Mahoba U.P. India</p>-->
     <!--  <form class="space-y-4">
         <input type="text" placeholder="Your Name" class="w-full border px-4 py-2 rounded" required>
         <input type="email" placeholder="Your Email" class="w-full border px-4 py-2 rounded" required>
