--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>KUKKU MASALAA | Premium Indian Spices</title>
   <meta name="description" content="Kukku Masala – Premium quality Indian Garam Masala powder, freshly packed for purity and taste.">
+  <meta name="description" content="Buy premium Garam Masala powder online from Kukku Masalaa. Handcrafted Indian spices with bold flavor, hygienically packed and delivered to your door.">
   <meta name="keywords" content="Garam Masala, Indian Spices, Kukku Masala, Spice Blend">
+  <meta name="keywords" content="kukku masalaa, kukku, masalaa, kuku garam masala, kuku garam masala, kuku gram, gram masala, masla, kakku, garam masala, Indian spices, masala powder, homemade garam masala, spice blend, best garam masala in India, premium spices, natural masala, Indian kitchen masala">
+
   <link rel="icon" href="/assets/favicon.ico" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
