--- a/index.html
+++ b/index.html
@@ -30,10 +30,13 @@
    <!-- Header -->
   <header class="bg-black text-white p-6 shadow-md">
     <div class="max-w-7xl mx-auto flex justify-between items-center">
-      <div class="flex items-center space-x-3">
+      <div class="flex items-cente' space-x-3">
+          <img src="Kukkuword.jpg" alt = "words logo" class="w-25 h-20"/>
+          </div>
+      <!--<div class="flex items-center space-x-3">
         <img src="logo.png" href="https://kukkumasalaa.com/" alt="Kukku Masala Logo" class="w-16 h-16" />
         <h1 class="text-3xl font-black-mango-bold" color: #ffb000; >KUKKU MASALAA</h1>
-      </div>
+      </div>-->
         <button id="menuToggle" class="md:hidden block text-white">
   ☰
 </button>
