--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <meta property="og:url" content="https://www.kukkumasalaa.com">
 <meta property="og:type" content="website">
   
-  <link rel="icon" href="kukku.ico" />
+  <link rel="icon" href="kukku.jpg" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
