--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <h4 class="text-xl font-semibold mb-2">Garam Masala Powder</h4>
             <p class="text-sm text-gray-600 mb-4">A handcrafted blend of premium spices to elevate your dishes with authentic Indian flavor.</p>
             <div class="flex space-x-2">
-              <a href="https://www.amazon.in/storefront?me=A3KH27FAB8PES6&ref_=ssf_share" target="_blank" class="flex items-center space-x-1 bg-yellow-500 text-white px-3 py-2 rounded hover:bg-yellow-600 text-sm">
+              <a href="https://www.amazon.in/s?i=merchant-items&me=A3KH27FAB8PES6&s=popularity-rank&fs=true&ref=lp_27943762031_sar" target="_blank" class="flex items-center space-x-1 bg-yellow-500 text-white px-3 py-2 rounded hover:bg-yellow-600 text-sm">
                 <img src="amazon.png" alt="Amazon" class="w-5 h-5" /> <span>Amazon</span>
               </a>
               <span class="flex items-center space-x-1 bg-gray-400 text-white px-3 py-2 rounded text-sm cursor-not-allowed opacity-60">
