--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
 <nav id="navMenu" class="flex-col md:flex md:flex-row gap-6 text-sm hidden md:flex bg-black md:bg-transparent absolute md:static top-16 left-1/2 transform -translate-x-1/2 w-3/4 md:w-auto p-4 md:p-0 text-center z-50">
 
   <a href="#products" class="hover:text-yellow-400 block md:inline" >Products</a>
+  <a href="table1.html" class="hover:text-yellow-400 block md:inline">Nutrition Value</a>
   <a href="#about" class="hover:text-yellow-400 block md:inline">About</a>
   <a href="#contact" class="hover:text-yellow-400 block md:inline">Contact</a>
+  
 </nav>
 <script>
   document.getElementById('menuToggle').addEventListener('click', function () {
