--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
             <div class="flex space-x-2">
               <a href="https://www.amazon.in/s?i=merchant-items&me=A3KH27FAB8PES6&s=popularity-rank&fs=true&ref=lp_27943762031_sar" target="_blank" class="flex items-center space-x-1 bg-yellow-500 text-white px-3 py-2 rounded hover:bg-yellow-600 text-sm">
                 <img src="amazon.png" alt="Amazon" class="w-5 h-5" /> <span>Amazon</span>
-              </a>
-              <span class="flex items-center space-x-1 bg-gray-400 text-white px-3 py-2 rounded text-sm cursor-not-allowed opacity-60">
+              </a
+                <a href ="https://www.flipkart.com/food-products/spice-powder-and-masala/kukkumasalaa~brand/pr?sid=eat,xgg&marketplace=FLIPKART&otracker=product_breadCrumbs_kukkumasalaa+Spice+Powder+and+Masala"/>
                 <img src="flipkart.png" alt="Flipkart" class="w-5 h-5" /> <span>Flipkart</span>
-              </span>
+              </a>
               <a href="https://www.meesho.com/KUKKUMASALAA?ms=2" target="_blank" class="flex items-center space-x-1 bg-pink-600 text-white px-3 py-2 rounded hover:bg-pink-700 text-sm">
                 <img src="meesho.png" alt="Meesho" class="w-5 h-5" /> <span>Meesho</span>
               </a>
