--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <h4 class="text-xl font-semibold mb-2">Garam Masala Powder</h4>
             <p class="text-sm text-gray-600 mb-4">A handcrafted blend of premium spices to elevate your dishes with authentic Indian flavor.</p>
             <div class="flex space-x-2">
-              <a href="https://www.amazon.in/s?i=merchant-items&me=A3KH27FAB8PES6&s=popularity-rank&fs=true&ref=lp_27943762031_sar" target="_blank" class="flex items-center space-x-1 bg-black text-white px-3 py-2 rounded hover:bg-black text-sm">
+              <a href="https://www.amazon.in/s?i=merchant-items&me=A3KH27FAB8PES6&s=popularity-rank&fs=true&ref=lp_27943762031_sar" target="_blank" class="flex items-center space-x-1 bg-black text-white px-3 py-2 rounded hover:bg-black-10 text-sm">
                 <img src="amazon.png" alt="Amazon" class="w-5 h-5" /> <span>Amazon</span>
               </a>
             <a href="https://www.flipkart.com/food-products/spice-powder-and-masala/kukkumasalaa~brand/pr?sid=eat,xgg&marketplace=FLIPKART&otracker=product_breadCrumbs_kukkumasalaa+Spice+Powder+and+Masala" target="_blank" class="flex items-center space-x-1 bg-yellow-500 text-white px-3 py-2 rounded hover:bg-yellow-700 text-sm"/>
