--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>KUKKU MASALAA | Premium Indian Spices</title>
   <meta name="description" content="Kukku Masala – Premium quality Indian Garam Masala powder, freshly packed for purity and taste.">
@@ -90,14 +91,14 @@
             <h4 class="text-xl font-semibold mb-2">Garam Masala Powder</h4>
             <p class="text-sm text-gray-600 mb-4">A handcrafted blend of premium spices to elevate your dishes with authentic Indian flavor.</p>
             <div class="flex space-x-2">
-              <a href="https://www.amazon.in/s?i=merchant-items&me=A3KH27FAB8PES6&s=popularity-rank&fs=true&ref=lp_27943762031_sar" target="_blank" class="flex items-center space-x-1 bg-black text-white px-3 py-2 rounded hover:bg-black-10 text-sm">
+              <a href="https://amzn.in/d/fkg0i8F" target="_blank" class="flex items-center space-x-1 bg-black text-white px-3 py-2 rounded hover:bg-black-10 text-sm">
                 <img src="amazon.png" alt="Amazon" class="w-5 h-5" /> <span>Amazon</span>
               </a>
-            <a href="https://www.flipkart.com/food-products/spice-powder-and-masala/kukkumasalaa~brand/pr?sid=eat,xgg&marketplace=FLIPKART&otracker=product_breadCrumbs_kukkumasalaa+Spice+Powder+and+Masala" target="_blank" class="flex items-center space-x-1 bg-yellow-500 text-white px-3 py-2 rounded hover:bg-yellow-700 text-sm"/>
+            <a href="https://dl.flipkart.com/dl/kukkumasalaa-garam-masala/p/itmb31ca1a303f86?pid=SCMHG7WSJDP7XZCV&lid=LSTSCMHG7WSJDP7XZCVAQL5DJ&marketplace=FLIPKART&hl_lid=&store=eat/xgg&_refId=&_appId=CL" target="_blank" class="flex items-center space-x-1 bg-yellow-500 text-white px-3 py-2 rounded hover:bg-yellow-700 text-sm"/>
            
               <img src="flipkart.png" alt="Flipkart" class="w-5 h-5" /> <span>Flipkart</span>
               </a>
-              <a href="https://www.meesho.com/KUKKUMASALAA?ms=2" target="_blank" class="flex items-center space-x-1 bg-pink-600 text-white px-3 py-2 rounded hover:bg-pink-700 text-sm">
+              <a href="https://www.meesho.com/s/p/9towc8?utm_source=s_wb" target="_blank" class="flex items-center space-x-1 bg-pink-600 text-white px-3 py-2 rounded hover:bg-pink-700 text-sm">
                 <img src="meesho.png" alt="Meesho" class="w-5 h-5" /> <span>Meesho</span>
               </a>
             </div>
