--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>KUKKU MASALAA | Premium Indian Spices</title>
-  <meta name="description" content="Kukku Masala – Premium quality Indian Garam Masala powder, freshly packed for purity and taste.">
- <!-- <meta name="description" content="Buy premium Garam Masala powder online from Kukku Masalaa. Handcrafted Indian spices with bold flavor, hygienically packed and delivered to your door.">-->
-  <meta name="keywords" content="Garam Masala, Indian Spices, Kukku Masala, Spice Blend, kukku masalaa, kukkumasala, kukkumasalaa, kukkugarammasala, kkku, kooku, gram,kukkumasalaa, kukku, masalaa, kuku garam masala, kuku garam masala, kuku gram, gram masala, masla, kakku, garam masala, Indian spices, masala powder, homemade garam masala, spice blend, best garam masala in India, premium spices, natural masala, Indian kitchen masala">
+  <title>KUKKUMASALAA | Premium Indian Spices</title>
+  <meta name="description" content="KukkuMasalaa – Premium quality Indian Garam Masala powder, freshly packed for purity and taste.">
+ <!-- <meta name="description" content="Buy premium Garam Masala powder online from KukkuMasalaa. Handcrafted Indian spices with bold flavor, hygienically packed and delivered to your door.">-->
+  <meta name="keywords" content="Garam Masala, Indian Spices, Kukku Masala, Spice Blend, kukku masalaa, kuku masala, kuku, masalaa, kukumasala, garam masala, kuku ,kukkumasala, kukkumasalaa, kukkugarammasala, kkku, kooku, gram,kukkumasalaa, kukku, masalaa, kuku garam masala, kuku garam masala, kuku gram, gram masala, masla, kakku, garam masala, Indian spices, masala powder, homemade garam masala, spice blend, best garam masala in India, premium spices, natural masala, Indian kitchen masala">
   <!--<meta name="keywords" content="">-->
   <meta name="author" content="Kukku Masalaa">
     <!-- Social Sharing (Open Graph) -->
@@ -37,7 +37,7 @@
           </div>
       <!--<div class="flex items-center space-x-3">
     
-        <h1 class="text-3xl font-black-mango-bold" color: #ffb000; >KUKKU MASALAA</h1>
+        <h1 class="text-3xl font-black-mango-bold" color: #ffb000; >KUKKUMASALAA</h1>
       </div>-->
         <button id="menuToggle" class="md:hidden block text-white">
   ☰
@@ -211,7 +211,7 @@
 
   <!-- Footer -->
   <footer class="bg-black text-white text-center py-6">
-     <p>&copy; 2025 Kukku Masala. All rights reserved.</p>
+     <p>&copy; 2025 KUKKUMASALAA. All rights reserved.</p>
     <div class="flex justify-center space-x-6 mt-3 text-sm"></div>
   </footer>
 
