--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                             break;
                         case "250gm":
                             amazonLink.href = "https://amzn.in/d/0bXrIo8";
-                            meeshoLink.href = "https://www.meesho.com/s/p/8xegaj?utm_source=s_wb";
+                            meeshoLink.href = "https://www.meesho.com/s/p/a5giwd?utm_source=s_wb";
                             amazonLink.style.display = 'flex';
                             meeshoLink.style.display = 'flex';
                             console.log("250gm selected: Amazon URL =", amazonLink.href, "Meesho URL =", meeshoLink.href);
