--- a/index.html
+++ b/index.html
@@ -104,12 +104,16 @@
                 <img src="meesho.png" alt="Meesho" class="w-5 h-5" /> <span>Meesho</span>
               </a>
             </div>-->
-               <h2>Select Weight</h2>
+               <h3 class="text-l font-semibold mb-2>Select Weight</h3>
         <div class="radio-group">
-        <label><input type="radio" name="weight" value="50gm" onchange="showPlatforms()"> 50 gm </label>
-        <label><input type="radio" name="weight" value="100gm" onchange="showPlatforms()"> 100 gm </label>
-        <label><input type="radio" name="weight" value="250gm" onchange="showPlatforms()"> 250 gm </label>
-    </div>
+               <span>
+                 <p class="text-xl mb-3
+                  <label><input type="radio" name="weight" value="50gm" onchange="showPlatforms()"> 50 gm </label>
+                  <label><input type="radio" name="weight" value="100gm" onchange="showPlatforms()"> 100 gm </label>
+                  <label><input type="radio" name="weight" value="250gm" onchange="showPlatforms()"> 250 gm </label>
+                 </p>
+              </span>
+      </div>
     <div id="platformLinks" class="platform-links flex space-x-2">
         <a id="amazonLink" href="#" target="_blank" class="flex items-center space-x-1 bg-black text-white px-3 py-2 rounded hover:bg-black-10 text-sm" style="display: none;">
             <img src="amazon.png" alt="Amazon" class="w-5 h-5" onerror="this.src='https://via.placeholder.com/20?text=A';">
