--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 </button>
 <nav id="navMenu" class="flex-col md:flex md:flex-row gap-6 text-sm hidden md:flex bg-black md:bg-transparent absolute md:static top-16 left-1/2 transform -translate-x-1/2 w-3/4 md:w-auto p-4 md:p-0 text-center z-50">
 
-  <a href="#products" class="hover:text-yellow-400 block md:inline" >Products</a>
-   <a href="#about" class="hover:text-yellow-400 block md:inline">About</a>
-  <a href="#contact" class="hover:text-yellow-400 block md:inline">Contact</a>
+  <a href="#products" class="hover:text-yellow-400 block md:inline font-bold text-2xl" >Products</a>
+   <a href="#about" class="hover:text-yellow-400 block md:inline font-bold text-2xl">About</a>
+  <a href="#contact" class="hover:text-yellow-400 block md:inline font-bold text-2xl">Contact</a>
   
 </nav>
 <script>
@@ -80,16 +80,66 @@
     </div>
   </section>
   <!-- Product Section -->
+
+
+      <style>
+  body {
+    font-family: Arial, sans-serif;
+  }
+
+  .quantity-container {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
+
+  .label {
+    color: #666;
+    margin-right: 10px;
+  }
+
+  /* Hide radio buttons */
+  .qty-input {
+    display: none;
+  }
+
+  /* Default button style */
+  .qty-label {
+    padding: 8px 16px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 14px;
+    color: #333;
+    transition: all 0.2s ease;
+  }
+
+  /* Hover effect */
+  .qty-label:hover {
+    border-color: #0a0a0a;
+    color: #0a0a0a;
+  }
+
+  /* Selected state */
+  .qty-input:checked + .qty-label {
+    border-color: #0a0a0a;
+    background-color: #000000;
+    color: #ffffff;
+    font-weight: bold;
+  }
+</style>
+
+
   
   <section id="products" class="py-20 px-6 bg-white">
     <div class="max-w-6xl mx-auto">
-      <h3 class="text-4xl font-bold text-center mb-12">Our Signature Product</h3>
+      <h3 class="text-4xl font-bold text-center mb-8">Our Signature Product</h3>
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
         <div class="border rounded-lg shadow hover:shadow-xl transition overflow-hidden">
           <img src="garam-masala.jpg" alt="Kukku Garam Masala" class="w-full h-auto object-cover rounded-t">
           <div class="p-6">
             <h4 class="text-xl font-semibold mb-2">Garam Masala Powder</h4>
-            <p class="text-sm text-gray-600 mb-4">A handcrafted blend of premium spices to elevate your dishes with authentic Indian flavor.</p>
+            <p class="text-sm text-gray-600 mb-2">A handcrafted blend of premium spices to elevate your dishes with authentic Indian flavor.</p>
             <!--<div class="flex space-x-2">
               <a href="https://amzn.in/d/fkg0i8F" target="_blank" class="flex items-center space-x-1 bg-black text-white px-3 py-2 rounded hover:bg-black-10 text-sm">
                 <img src="amazon.png" alt="Amazon" class="w-5 h-5" /> <span>Amazon</span>
@@ -104,21 +154,48 @@
                 <img src="meesho.png" alt="Meesho" class="w-5 h-5" /> <span>Meesho</span>
               </a>
             </div>-->
-   <span> <h3 class="text-l font-semibold mb-2">Select the weight</h3></span>
-        <div class="radio-group">
+   <span> <h3 class="text-l font-semibold mb-2">Select the Quantity</h3></span>
 
+
+     <!-- <div class="quantity-container">
         <span>
-        <p class="text-xl mb-3">
-        <label><input type="radio" name="weight" value="50gm" onchange="showPlatforms()"> 50 gm </label>
-        <label><input type="radio" name="weight" value="100gm" onchange="showPlatforms()"> 100 gm </label>
-        <label><input type="radio" name="weight" value="250gm" onchange="showPlatforms()"> 250 gm </label></p> </span>
-    </div>
+          <p class="text-xl mb-3">
+            <label><input type="radio" name="weight" value="50gm" onchange="showPlatforms()"> 50 gm </label>
+            <label><input type="radio" name="weight" value="100gm" onchange="showPlatforms()"> 100 gm </label>
+            <label><input type="radio" name="weight" value="250gm" onchange="showPlatforms()"> 250 gm </label>
+          </p>
+        </span>
+      </div>-->
+
+        <div class="quantity-container mb-2">
+
+          <input type="radio" name="weight" id="q1" class="qty-input" value="50gm" onchange="showPlatforms()">
+          <label for="q1" class="qty-label">50 g</label>
+
+          <input type="radio" name="weight" id="q2" class="qty-input" value="100gm" onchange="showPlatforms()">
+          <label for="q2" class="qty-label">100 g</label>
+
+          <input type="radio" name="weight" id="q3" class="qty-input" value="150gm" onchange="showPlatforms()">
+          <label for="q3" class="qty-label">150 g</label>
+
+          <input type="radio" name="weight" id="q4" class="qty-input" value="250gm" onchange="showPlatforms()">
+          <label for="q4" class="qty-label">250 g</label>
+      </div>
+
+
+
            
     <div id="platformLinks" class="platform-links flex space-x-2">
         <a id="amazonLink" href="#" target="_blank" class="flex items-center space-x-1 bg-black text-white px-3 py-2 rounded hover:bg-black-10 text-sm" style="display: none;">
             <img src="amazon.png" alt="Amazon" class="w-5 h-5" onerror="this.src='https://via.placeholder.com/20?text=A';">
             <span>Amazon</span>
         </a>
+
+        <a id="flipkartLink" href="#" target="_blank" class="flex items-center space-x-1 bg-yellow-500 text-white px-3 py-2 rounded hover:bg-black-10 text-sm" style="display: none;">
+            <img src="flipkart.png" alt="Flipkart" class="w-5 h-5" onerror="this.src='https://via.placeholder.com/20?text=F';">
+            <span>Flipkart</span>
+            </a>
+
         <a id="meeshoLink" href="#" target="_blank" class="flex items-center space-x-1 bg-pink-600 text-white px-3 py-2 rounded hover:bg-pink-700 text-sm" style="display: none;">
             <img src="meesho.png" alt="Meesho" class="w-5 h-5" onerror="this.src='https://via.placeholder.com/20?text=M';">
             <span>Meesho</span>
@@ -130,6 +207,7 @@
             const platformLinks = document.getElementById('platformLinks');
             const amazonLink = document.getElementById('amazonLink');
             const meeshoLink = document.getElementById('meeshoLink');
+            const flipkartLink = document.getElementById('flipkartLink');
             const selectedWeight = document.querySelector('input[name="weight"]:checked');
 
             // Reset display
@@ -137,7 +215,7 @@
             amazonLink.style.display = 'none';
             meeshoLink.style.display = 'none';
 
-            try {
+          try {
                 if (selectedWeight) {
                     platformLinks.style.display = 'flex';
                     const weight = selectedWeight.value;
@@ -145,23 +223,39 @@
                     // Set href attributes based on weight using switch
                     switch (weight) {
                         case "50gm":
-                            amazonLink.href = "https://amzn.in/d/0Kfi5pN";
+                            //amazonLink.href = "https://amzn.in/d/0Kfi5pN";
+                            //amazonLink.style.display = 'flex';
+                            flipkartLink.href = "https://dl.flipkart.com/s/mxnD5pNNNN"
+                            flipkartLink.style.display = 'flex';
                             meeshoLink.href = "https://www.meesho.com/s/p/9towc8?utm_source=s_wb";
-                            amazonLink.style.display = 'flex';
                             meeshoLink.style.display = 'flex';
+
                             console.log("50gm selected: Amazon URL =", amazonLink.href, "Meesho URL =", meeshoLink.href);
                             break;
                         case "100gm":
-                            amazonLink.href = "https://amzn.in/d/c9GERW7";
+                            //amazonLink.href = "https://amzn.in/d/c9GERW7";
+                            //amazonLink.style.display = 'flex';
+                            flipkartLink.href = "https://dl.flipkart.com/s/mxbJB9NNNN"
+                            flipkartLink.style.display = 'flex';
                             meeshoLink.href = "https://www.meesho.com/s/p/9tok6q?utm_source=s_wb";
-                            amazonLink.style.display = 'flex';
+                            meeshoLink.style.display = 'flex';
+                            console.log("100gm selected: Amazon URL =", amazonLink.href, "Meesho URL =", meeshoLink.href);
+                            break;
+                        case "150gm":
+                            //amazonLink.href = "https://amzn.in/d/c9GERW7";
+                            //amazonLink.style.display = 'flex';
+                            flipkartLink.href = "https://dl.flipkart.com/s/S9VyAAuuuN"
+                            flipkartLink.style.display = 'flex';
+                            meeshoLink.href = "https://www.meesho.com/s/p/9wek9w?utm_source=s_wb";
                             meeshoLink.style.display = 'flex';
                             console.log("100gm selected: Amazon URL =", amazonLink.href, "Meesho URL =", meeshoLink.href);
                             break;
                         case "250gm":
-                            amazonLink.href = "https://amzn.in/d/0bXrIo8";
+                            //amazonLink.href = "https://amzn.in/d/0bXrIo8";
+                            //amazonLink.style.display = 'flex';
+                            flipkartLink.href = "https://dl.flipkart.com/s/mxY5_UNNNN"
+                            flipkartLink.style.display = 'flex';
                             meeshoLink.href = "https://www.meesho.com/s/p/a5giwd?utm_source=s_wb";
-                            amazonLink.style.display = 'flex';
                             meeshoLink.style.display = 'flex';
                             console.log("250gm selected: Amazon URL =", amazonLink.href, "Meesho URL =", meeshoLink.href);
                             break;
