--- a/index.html
+++ b/index.html
@@ -383,7 +383,8 @@
         </a>
       
     </div>
-      <p class="text-gray-700 mb-4"><strong>Phone:</strong> +91 70070 43743</p>
+      <p class="text-gray-700 mb-4"><strong>Phone:</strong> 
+        <a href = "tel:+917007043743">+91-7007043743</a></p>
       <p class="text-gray-700 mb-4"><strong>Email:</strong> <a href="mailto:info@kukkumasala.com" class="text-blue-600 hover:underline">kukkumasalaa@gmail.com</a></p>
     <!--  <p class="text-gray-700 mb-8"><strong>Location:</strong> Mahoba U.P. India</p>-->
     <!--  <form class="space-y-4">
